--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -110,6 +110,17 @@ input[type=submit] {
   font-size: 22px;
 }
 
+.adasokmezo {
+  max-width: 600px;
+  border: 1px solid #ccc;
+  padding: 8px 12px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border-radius: 10px;
+  font-size: 16px;
+}
+
 .forma {
 margin-left: auto;
 margin-right: auto;
